Review Request 1080: Fix Model List alignment issue

--- a/le-ui/projects/leadprioritization/assets/styles/style.scss
+++ b/le-ui/projects/leadprioritization/assets/styles/style.scss
@@ -558,23 +558,68 @@ Model List
 .home #main-content {
     margin-top: 20px;
 }
+
+.create-model {
+    margin-right: 1%;
+}
+
+.model-list > div, 
+.model-list > div > div, 
+.model-list > div > div > div,
+.model-list > div > div > div > div, 
+.model-list > div > div > div > div > div,  
+.model-list > div > div > div > div > div > div > div,
+.model-list > div > div > div > div > div > div > div > div,
+.model-list > div > div > div > div > div > div > div > div > div
+{
+    display: inline;
+}
+
 .model {
     background: #fff url(/assets/images/bkg-active-model-lp.jpg) no-repeat center center;
     background-size: 130px;
     border: #e0e3e6 solid 2px;
     position: relative;
     min-height: 300px;
-    margin-right: 20px;
     margin-bottom: 20px;
     display: block;
     -webkit-border-radius: 4px; 
     -moz-border-radius: 4px; 
     border-radius: 4px; 
+    width: 100%;
     &:hover {
         border-color: #486d99;
         cursor: pointer;
     }
 }
+
+@media (min-width: 467px) {
+    .model{
+        display: inline-block;
+        margin-right: 1%;
+        width: 49%;
+    }
+    .model-list > div > div > div > div > div > div > div:nth-child(2n) .model {
+        margin-right: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    .model{
+        width: 32.1%;
+        margin-right: 1%;
+    }
+    .model-list > div > div > div > div > div > div > div:nth-child(2n) .model {
+        margin-right: 1%;
+    }
+    .model-list > div > div > div > div > div > div > div:nth-child(3n) .model {
+        margin-right: 0;
+    }
+}
+
+
+
+
 .model-title {
     position: absolute;
     top: 0px;
